--- a/todo_list/templates/todo_list/tasks/task_detail.html
+++ b/todo_list/templates/todo_list/tasks/task_detail.html
@@ -10,5 +10,6 @@
             <h2>Description:</h2>
             <p>{{ task.body }}</p>
         </div>
+        <a href="{% url 'todo:task_update' task.id %}">Edit Task</a> |
     <a href="{% url 'todo:task_list' %}">Back to Task List</a>
 {% endblock %}
